# harina-v3-cli

./: .SourceSageignore  .env.example  .gitignore  README.md  output.xml  pyproject.toml  test_package.py
.github/workflows/: deploy.yml
docs/: DEVELOPMENT.md
example/: README.md
example/fastapi-server/: .env.example  .gitignore  README.md  client_sample.py  dev.py  main.py  pyproject.toml  requirements.txt  run_server.py
example/fastapi-server/src/: client_sample.py  main.py
example/receipt-sample/: IMG_8923.csv  IMG_8923.xml  IMG_8924.xml  IMG_8925.xml  IMG_8926.xml  IMG_8927.xml
harina/: __init__.py  cli.py  ocr.py  product_categories.xml  receipt_template.xml  server.py
